->Se limpia un poco el directorio para que sea mas facil la indexacion -->Simplificar el HTML -->Hacer funcionar gh-pages

--- a/Sandalias/Sandalias.html
+++ b/Sandalias/Sandalias.html
@@ -23,7 +23,7 @@
     <script src="https://kit.fontawesome.com/1ee22afc5d.js" crossorigin="anonymous"></script>
 
     <!-- ESTILOS -->
-    <link rel="stylesheet" href="SandaliasCss/SandaliasCss.css">
+    <link rel="stylesheet" href="../subpages.css">
 </head>
 <body>
     <div class="todo">
@@ -37,23 +37,23 @@
                 <nav class="menu">
                     <ul>
                         <li>
-                            <a href="../../index.html"> Inicio </a>
+                            <a href="../index.html"> Inicio </a>
                         </li>
 
                         <li>
-                            <a href="../02Blusas/Blusas.html"> Blusas </a>
+                            <a href="../Blusas/Blusas.html"> Blusas </a>
                         </li>
 
                         <li>
-                            <a href="../03Pantalones/Pantalones.html"> Pantalones </a>
+                            <a href="../Pantalones/Pantalones.html"> Pantalones </a>
                         </li>
 
                         <li>
-                            <a href="../04Sandalias/Sandalias.html"> Sandalias </a>
+                            <a href="../Sandalias/Sandalias.html"> Sandalias </a>
                         </li>
 
                         <li>
-                            <a href="../05Vestidos/Vestidos.html"> Vestidos </a>
+                            <a href="../Vestidos/Vestidos.html"> Vestidos </a>
                         </li>
                     </ul>
 
