--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://kit.fontawesome.com/1ee22afc5d.js" crossorigin="anonymous"></script>
 
     <!-- ESTILOS -->
-    <link rel="stylesheet" href="Css/InicioenCss.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="todo">
@@ -41,19 +41,19 @@
                         </li>
 
                         <li>
-                            <a href="01Proyecto/02Blusas/Blusas.html"> Blusas </a>
+                            <a href="Blusas/Blusas.html"> Blusas </a>
                         </li>
 
                         <li>
-                            <a href="01Proyecto/03Pantalones/Pantalones.html"> Pantalones </a>
+                            <a href="Pantalones/Pantalones.html"> Pantalones </a>
                         </li>
 
                         <li>
-                            <a href="01Proyecto/04Sandalias/Sandalias.html"> Sandalias </a>
+                            <a href="Sandalias/Sandalias.html"> Sandalias </a>
                         </li>
 
                         <li>
-                            <a href="01Proyecto/05Vestidos/Vestidos.html"> Vestidos </a>
+                            <a href="Vestidos/Vestidos.html"> Vestidos </a>
                         </li>
                     </ul>
                 </nav>
